# pysparkappblanche

./: .gitignore  Dockerfile  EXPORT_LIB.md  README.md  docker-compose.yml  kafka-single-node.yml  pyproject.toml
files/: SMDC01_20200115100204563.csv  conso-oracle.csv  order_summary.csv
settings/: __init__.py
settings/jobs/: conso_config.json  streaming_alerts_and_thresholds_config.json  streaming_analytics_config.json
src/helpers/: Kafka_alert_data_generator.py  Kafka_conso_data_generator.py  jsonb_conso_data_generator.py  logging_app.py  spark.py  type.py  utils.py
src/helpers/db/: postgres.py
src/jobs/: load_conso.py  streaming_alerts_and_thresholds.py  streaming_analytics.py
src/repositories/: conso_repositories.py
src/services/: conso_transform.py
src/usecases/: load_conso.py  streaming_alerts_and_thresholds.py  streaming_analytics.py
tests/: __init__.py  conftest.py
